# write-offs-marker

./: README.md  config.example.toml  pyproject.toml
src/: config.py  dependencies.py  handlers.py  main.py  models.py  spreadsheets.py  telegram.py
